[GTK] Fix build on macOS https://bugs.webkit.org/show_bug.cgi?id=243759

Reviewed by Yusuke Suzuki.

This attempts to fix the WebKitGTK build on macOS. The patch is
contributed by echassiers.09-regards@icloud.com.

* Source/WTF/wtf/FastMalloc.cpp:
* Source/WTF/wtf/PlatformGTK.cmake:
* Source/WTF/wtf/RandomDevice.cpp:
* Source/WTF/wtf/WTFConfig.cpp:
(WTF::setPermissionsOfConfigPage):
(WTF::Config::permanentlyFreeze):
* Source/WTF/wtf/posix/OSAllocatorPOSIX.cpp:

Canonical link: https://commits.webkit.org/253367@main